--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </main>
 
     <footer>
-        © 2024 Мой сайт
+        © 2024 Социальный эксперимент
     </footer>
 
     <script src="scripts/script.js"></script>
