--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     </main>
 
     <footer>
-        © 2024 Мой сайт
+        © 2024 Социальный эксперимент
     </footer>
 
     <script src="scripts/script.js"></script>
