--- a/about.html
+++ b/about.html
@@ -17,6 +17,7 @@
     <main>
         <h1>Давай познакомимся!</h1>
         <p>Расскажи о себе!</p>
+        <p>P.S. Сообщения, пока что, нельзя удалять (а возможно, и вовсе будет нельзя).</p>
         
         <!-- Форма для ввода сообщений -->
         <h2>Оставьте ваше сообщение:</h2>
